@@ -23,7 +23,7 @@
             <div class="ktab" data-what="kplugins">{pluginsHeadline}</div>
 
             <span class="ktext kspace">kre</span>
-            <div class="klogo"><div class="klogo-xx">XX</div></div>
+            <span class="klogo"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 65.2 65.2"><path fill="#ffcd09" d="M32.6 0C14.6 0 0 14.6 0 32.6s14.6 32.6 32.6 32.6 32.6-14.6 32.6-32.6S50.6 0 32.6 0z"></path><path d="M24.9 47.2c-.2-.1-3.3-5.8-4.9-8.9h-.2c-1.6 3.1-4.6 8.8-4.8 8.8-1.3.2-6.5-1.3-6.5-1.6-.1-.3 5.1-9.7 6.6-12.3-.3-.2-6.2-10.7-6.2-11.2s5.7-2.1 6.2-2c.2.1 3.3 5.7 4.6 8.8h.3c1.6-3 4.7-8.8 5-8.8.4 0 6 1.5 6.1 1.9 0 .5-5.9 11-6.2 11.4 1.4 2.4 6.7 11.7 6.7 12M51.4 47.2c-.2-.1-3.3-5.8-4.9-8.9h-.2c-1.6 3.1-4.6 8.8-4.8 8.8-1.3.2-6.5-1.3-6.5-1.6-.1-.3 5.1-9.7 6.6-12.3-.2-.3-6.1-10.9-6-11.4 0-.5 5.7-2.1 6.2-2 .2.1 3.3 5.7 4.6 8.8h.2c1.6-3 4.7-8.8 5-8.8.4 0 6 1.5 6.1 1.9 0 .5-5.9 11-6.2 11.4 1.4 2.4 6.7 11.7 6.7 12"></path></svg></span>
             <span class="ktext">{version}</span>
             <span class="ktext kspace">{callNumber} {KrexxCount}</span>
 
