@@ -202,21 +202,11 @@
 }
 .kwrapper .knode .ktool-tabs .klogo, .kfatalwrapper-outer .knode .ktool-tabs .klogo {
   display: inline-block;
-  background-color: #FED300;
-  border-radius: 50%;
-  color: #555555;
-  font-size: 16px;
-  font-weight: bold;
   height: 20px;
   width: 20px;
-  vertical-align: -2px;
-}
-.kwrapper .knode .ktool-tabs .klogo .klogo-xx, .kfatalwrapper-outer .knode .ktool-tabs .klogo .klogo-xx {
-  /* Klo go XX? Really? */
-  margin-left: 3px;
-  margin-top: 4px;
-  position: absolute;
-  font-size: 9px;
+  vertical-align: -3px;
+  font-size: initial;
+  font-weight: initial;
 }
 .kwrapper .knode .ktool-tabs .ktext, .kfatalwrapper-outer .knode .ktool-tabs .ktext {
   display: inline-block;
