@@ -25,11 +25,13 @@
 - Change: Updated to UnitTest 11.4
 - Change: Use the encoding service to encode comments.
 - Change: Introduced a static cache to the string mimetype analysis.
+- Change: Use an SVG in both skins for the kreXX logo.
 
 5.0.10
 - Bugfix: Remove all Unicode chars from the generated CSS for the
   smokygrey skin, because the TYPO3 asset collector does not
   support them anymore.
+- Bugfix: Do not run out of memory when escaping very large strings.
 
 5.0.9
 - Bugfix: Add the missing "kreXX Messages" to the translation.
